# ds-fastapi

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/ds_fastapi/: EnhancedFastAPI.py  UncaughtExceptionMiddleware.py  __init__.py  example.py  py.typed
tests/: test_enhanced_fastapi.py  test_uncaught_exception_middleware.py
