[project]
name = "ds-fastapi"
version = "0.0.1"
description = "Enhanced FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling >= 1.14.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ds_fastapi"]

